🪪 fixed duplicated uuids, 🧹cleaned up code
Fixed duplicated uuids
Added more debug statements
Cleaned up some code
Added more error checking

--- a/app/index.html
+++ b/app/index.html
@@ -18,28 +18,7 @@
 </head>
 
 <body>
-    <!-- <div id="main">
-            <div id="image-container">
-                <div id="video_image"></div>
-                <div id="progress1"></div>
-            </div>
-            <div id="main_text">
-                <div id="text-theme-box">
-                    <p id="video_name">Video Name [None]</p>
-                    <p id="video_creator">Video creator [None]</p>
-                </div>
-            </div>
-        </div>
 
-        <div id="time-content">
-            <div id="time_bar"></div>
-            <p id="time">#:## / #:##</p>
-        </div>
-        <i
-            class="bi bi-gear"
-            id="settings"
-            onclick="window.settings.settings()"
-        ></i> -->
     <div id="sidebyside">
         <div id="sidebar">
             <div class="sidebar-item sidebar-item-active">
@@ -65,6 +44,7 @@
         <div id="main">
             <div class="master-page home-page active-page">
                 <table id="clients-table">
+                    
                     <tr>
                         <th>Image</th>
                         <th>State</th>
@@ -75,64 +55,15 @@
                         <th class="home-page-table-uuid">UUID</th>
                     </tr>
                     <tr>
-                        <td class="home-page-table-image">
-                            <div class="home-page-table-image-center">
-                                <img src="https://i.scdn.co/image/ab67616d00004851939213aed318406da7c29acb" >
-                            </div>
-                        </td>
-                        <td class="home-page-table-status">
-                            <div class="home-page-table-image-center">
-                                <span class="material-symbols-outlined home-page-table-status-icon">
-                                    play_arrow
-                                </span>
-                            </div>
-                        </td>
-                        <td>Spotify Desktop App</td>
-                        <td>Love How It Hurts</br>Alex Johansoon</td>
-                        <td>Spotify</td>
-                        <td>127.0.0.1</td>
-                        <td class="home-page-table-uuid">ee807de6-e92b-4fa3-b2b4-ec987be5e668</td>
+                        <td class="home-page-table-image"></td>
+                        <td class="home-page-table-status"></td>
+                        <td><h2>It looks a bit empty here, connected providers will show up here.</h2></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td class="home-page-table-uuid"></td>
                     </tr>
-<!-- 
-                    <tr>
-                        <td class="home-page-table-image">
-                            <div class="home-page-table-image-center">
-                                <img src="https://i.scdn.co/image/ab67616d00004851939213aed318406da7c29acb" >
-                            </div>
-                        </td>
-                        <td class="home-page-table-status">
-                            <div class="home-page-table-image-center">
-                                <span class="material-symbols-outlined home-page-table-status-icon">
-                                    pause
-                                </span>
-                            </div>
-                        </td>
-                        <td>Spotify Desktop App</td>
-                        <td>Love How It Hurts</br>Alex Johansoon</td>
-                        <td>Spotify</td>
-                        <td>127.0.0.1</td>
-                        <td class="home-page-table-uuid">ee807de6-e92b-4fa3-b2b4-ec987be5e668</td>
-                    </tr>
-                    <tr>
-                        <td class="home-page-table-image">
-                            <div class="home-page-table-image-center">
-                                <img src="https://i.scdn.co/image/ab67616d00004851939213aed318406da7c29acb" >
-                            </div>
-                        </td>
-                        <td class="home-page-table-status">
-                            <div class="home-page-table-image-center">
-                                <span class="material-symbols-outlined home-page-table-status-icon">
-                                    question_mark
-                                </span>
-                            </div>
-                        </td>
-                        <td>Spotify Desktop App</td>
-                        <td>Love How It Hurts</br>Alex Johansoon</td>
-                        <td>Spotify</td>
-                        <td>127.0.0.1</td>
-                        <td class="home-page-table-uuid">ee807de6-e92b-4fa3-b2b4-ec987be5e668</td>
-                    </tr> -->
-                    
+
                 </table>
             </div>
         </div>
