🔧Fixed UI and a few other things.
🎨Added error checking in the ui.
⚙️Added error checking for the internal client code.
✏️Edited the ui to be a bit more clear.
📒Fixed the logger.

--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
                         <th>Image</th>
                         <th>State</th>
                         <th>Name</th>
-                        <th>Current Song</th>
+                        <th>Current Title</th>
                         <th>Service</th>
                         <th>IP</th>
                         <th class="home-page-table-uuid">UUID</th>
