--- a/app/index.html
+++ b/app/index.html
@@ -72,62 +72,9 @@
             </div>
 
             <div id="plugins-page" class="master-page plugins-page">
-                <h1>Work In Progress</h1>
-                <div class="grid-container hidden">
-                    <div class="plugin">
-                        <div class="plugin-details">
-                            <div class="plugin-topbar">
-                                <span class="plugin-title">
-                                    WatchRPC
-                                </span>
-                                <span class="material-symbols-outlined">
-                                    settings
-                                </span>
-                                <label class="switch">
-                                    <input type="checkbox">
-                                    <span class="slider"></span>
-                                </label>
-                            </div>
-                            <span>By WaterWolf5918</span><br />
-                            <span>A plugin that displays currently playing media on your discord profile</span>
-                        </div>
-                    </div>  
-                    <div class="plugin">
-                        <div class="plugin-details">
-                            <div class="plugin-topbar">
-                                <span class="plugin-title">
-                                    WatchRPC
-                                </span>
-                                <span class="material-symbols-outlined">
-                                    settings
-                                </span>
-                                <label class="switch">
-                                    <input type="checkbox">
-                                    <span class="slider"></span>
-                                </label>
-                            </div>
-                            <span>By WaterWolf5918</span><br />
-                            <span>A plugin that displays currently playing media on your discord profile</span>
-                        </div>
-                    </div>  
-                    <div class="plugin">
-                        <div class="plugin-details">
-                            <div class="plugin-topbar">
-                                <span class="plugin-title">
-                                    WatchRPC
-                                </span>
-                                <span class="material-symbols-outlined">
-                                    settings
-                                </span>
-                                <label class="switch">
-                                    <input type="checkbox">
-                                    <span class="slider"></span>
-                                </label>
-                            </div>
-                            <span>By WaterWolf5918</span><br />
-                            <span>A plugin that displays currently playing media on your discord profile</span>
-                        </div>
-                    </div>  
+                <!-- <h1>Work In Progress</h1> -->
+                <div class="grid-container">
+
                 </div>
             </div>
             <div id="settings-page" class="master-page plugins-page">
