Clean Up, and border

--- a/app/index.html
+++ b/app/index.html
@@ -73,11 +73,11 @@
 
             <div id="plugins-page" class="master-page plugins-page">
                 <!-- <h1>Work In Progress</h1> -->
-                <div id="plugin-settings-grid" class="grid-container hidden">
+                <div id="plugin-settings-grid" class="grid-container ">
 
                 </div>
 
-                <div id="plugin-settings-panel" class="sidebyside">
+                <div id="plugin-settings-panel" class="sidebyside hidden">
                     <div id="plugin-settings-sidebar" class="sidebar">
 
                     </div>
@@ -114,6 +114,4 @@
 
 </body>
 <script src="../dist/renderer.js"></script>
-
-
 </html>
