⚙️Updated settings for new ui.
Updated settings for the new ui.
Updated ESLint config.

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,16 @@
         </div>
     </template>
 
+    <template id="settings-toggle-tenplate">
+        <div class="settings-option">
+            <p class="settings-label">label</p>
+            <label class="toggle-swtich">
+                <input type="checkbox">
+                <span class="toggle-switch-slider"></span>
+            </label>
+        </div>
+    </template>
+
 
     <div class="content">
         <div class="sidebar">
@@ -53,7 +63,7 @@
                 <div class="provider-uuid"><p>UUID</p></div>
             </div>
             <div id="provider-table">
-                
+
             </div>
 
         </div>
@@ -66,16 +76,25 @@
             <p class="settings-category">General</p>
             <div class="settings-option">
                 <p class="settings-label">label</p>
-                <button class="settings-toggle">toggle</button>
+                <label class="toggle-swtich">
+                    <input type="checkbox">
+                    <span class="toggle-switch-slider"></span>
+                </label>
             </div>
             <p class="settings-category">Debug</p>
             <div class="settings-option">
                 <p class="settings-label">Show IPs</p>
-                <button class="settings-toggle">toggle</button>
+                <label class="toggle-swtich">
+                    <input type="checkbox">
+                    <span class="toggle-switch-slider"></span>
+                </label>
             </div>
             <div class="settings-option">
                 <p class="settings-label">Show UUIDs</p>
-                <button class="settings-toggle">toggle</button>
+                <label class="toggle-swtich">
+                    <input type="checkbox">
+                    <span class="toggle-switch-slider"></span>
+                </label>
             </div>
         </div>
     </div>
