--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
                 <div class="provider-ip"><p>IP</p></div>
                 <div class="provider-uuid"><p>UUID</p></div>
             </div>
-            <div id="provider-table">
+            <div id="provider-table" class="provider-table">
 
             </div>
 
