Work on plugins

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,25 @@
         </div>
     </template>
 
+    <template id="plugin-tenplate">
+        <div class="plugin">
+            <div class="plugin-topbar">
+                <span class="plugin-name">Very advanced plugin</span>
+                <div class="plugin-topbar-right">
+                    <span class="material-symbols-rounded">settings</span>
+                    <label class="toggle-swtich">
+                        <input type="checkbox">
+                        <span class="toggle-switch-slider"></span>
+                    </label>
+                </div>
+
+            </div>
+            <div class="plugin-desc">
+                <p class="plugin-desc">A helpful description of your plugin.</p>
+            </div>
+        </div>
+    </template>
+
 
     <div class="content">
         <div class="sidebar">
@@ -69,7 +88,44 @@
         </div>
 
         <div class="page plugins-content" id="plugins-content">
-            <p>plugins</p>
+            <div id="plugins-content-inner" class="plugins-content-inner">
+<!-- 
+                <div class="plugin">
+                    <div class="plugin-topbar">
+                        <span>WatchRPC</span>
+                        <div class="plugin-topbar-right">
+                            <span class="material-symbols-rounded">settings</span>
+                            <label class="toggle-swtich">
+                                <input type="checkbox">
+                                <span class="toggle-switch-slider"></span>
+                            </label>
+                        </div>
+
+                    </div>
+                    <div class="plugin-desc">
+                        <p>A helpful description of your plugin.</p>
+                    </div>
+                </div>
+
+                <div class="plugin">
+                    <div class="plugin-topbar">
+                        <span>Plugin Name</span>
+                        <div class="plugin-topbar-right">
+                            <span class="material-symbols-rounded">settings</span>
+                            <label class="toggle-swtich">
+                                <input type="checkbox">
+                                <span class="toggle-switch-slider"></span>
+                            </label>
+                        </div>
+
+                    </div>
+                    <div class="plugin-desc">
+                        <p>Test</p>
+                    </div>
+                </div> -->
+
+
+            </div>
         </div>
 
         <div class="page settings-content" id="settings-content">
