🔌Remake part of PluginManager, again. . .
Plugins can now be started and stopped by name.

--- a/app/index.html
+++ b/app/index.html
@@ -68,9 +68,6 @@
             </div>
         </div>
 
-
-        
-
         <div class="page home-content active-page" id="home-content">
             <div class="provider provider-header">
                 <div class="provider-image"><p>Image</p></div>
@@ -88,70 +85,16 @@
         </div>
 
         <div class="page plugins-content" id="plugins-content">
-            <div id="plugins-content-inner" class="plugins-content-inner">
-<!-- 
-                <div class="plugin">
-                    <div class="plugin-topbar">
-                        <span>WatchRPC</span>
-                        <div class="plugin-topbar-right">
-                            <span class="material-symbols-rounded">settings</span>
-                            <label class="toggle-swtich">
-                                <input type="checkbox">
-                                <span class="toggle-switch-slider"></span>
-                            </label>
-                        </div>
+            <div id="plugins-list" class="plugins-list">
 
-                    </div>
-                    <div class="plugin-desc">
-                        <p>A helpful description of your plugin.</p>
-                    </div>
-                </div>
-
-                <div class="plugin">
-                    <div class="plugin-topbar">
-                        <span>Plugin Name</span>
-                        <div class="plugin-topbar-right">
-                            <span class="material-symbols-rounded">settings</span>
-                            <label class="toggle-swtich">
-                                <input type="checkbox">
-                                <span class="toggle-switch-slider"></span>
-                            </label>
-                        </div>
-
-                    </div>
-                    <div class="plugin-desc">
-                        <p>Test</p>
-                    </div>
-                </div> -->
-
+            </div>
+            <div id="plugins-settings" class="plugins-list">
 
             </div>
         </div>
 
         <div class="page settings-content" id="settings-content">
-            <p class="settings-category">General</p>
-            <div class="settings-option">
-                <p class="settings-label">label</p>
-                <label class="toggle-swtich">
-                    <input type="checkbox">
-                    <span class="toggle-switch-slider"></span>
-                </label>
-            </div>
-            <p class="settings-category">Debug</p>
-            <div class="settings-option">
-                <p class="settings-label">Show IPs</p>
-                <label class="toggle-swtich">
-                    <input type="checkbox">
-                    <span class="toggle-switch-slider"></span>
-                </label>
-            </div>
-            <div class="settings-option">
-                <p class="settings-label">Show UUIDs</p>
-                <label class="toggle-swtich">
-                    <input type="checkbox">
-                    <span class="toggle-switch-slider"></span>
-                </label>
-            </div>
+
         </div>
     </div>
 
