⚙️ Added more setting types

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,6 @@
     </template>
 
     <template id="settings-toggle-tenplate">
-
         <div class="settings-option">
             <p class="settings-label">label</p>
             <label class="toggle-swtich">
@@ -30,6 +29,37 @@
             </label>
         </div>
     </template>
+
+    <template id="settings-text-tenplate">
+        <div class="settings-option settings-text">
+            <p class="settings-label">label</p>
+            <input type="text" placeholder="text" class="settings-input settings-text-input">
+        </div>
+    </template>
+
+    
+    <template id="settings-number-tenplate">
+        <div class="settings-option settings-text">
+            <p class="settings-label">label</p>
+            <input type="number" placeholder="0000" class="settings-input settings-number-input">
+        </div>
+    </template>
+
+    <template id="settings-range-tenplate">
+        <div class="settings-option settings-text">
+            <p class="settings-label">label</p>
+            <input type="range" class="settings-input">
+            <input type="number" placeholder="0000" class="settings-input settings-number-input">
+        </div>
+    </template>
+
+    <template id="settings-color-tenplate">
+        <div class="settings-option settings-text">
+            <p class="settings-label">label</p>
+            <input type="color" class="settings-input settings-color-input">
+        </div>
+    </template>
+
 
     <template id="plugin-tenplate">
         <div class="plugin">
