📋Settings UI error check, 🔝Version Bump

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,12 @@
         </div>
     </template>
 
+    <template id="settings-unknown-tenplate">
+        <div class="settings-option">
+            <p class="settings-label">label</p>
+        </div>
+    </template>
+
     <template id="settings-toggle-tenplate">
         <div class="settings-option">
             <p class="settings-label">label</p>
@@ -29,6 +35,7 @@
             </label>
         </div>
     </template>
+    
 
     <template id="settings-text-tenplate">
         <div class="settings-option settings-text">
